coretrace/stapi_v2/stapi_v2.h

typedef uint32_t st_uint_t;
/* changing return code convention from v1
   to be in line with industry convention.
   i.e. 0 for success, non-zero for failure. */
typedef st_uint_t st_return_t;
typedef enum st_runner_type_t : st_uint_t {
	NATIVE = 0,   /* 0 */
	OPTIX,        /* 1 */
	EMBREE,		  /* 2 */
	RUNNER_COUNT         /* sentinel (not a valid runner) */
} st_runner_type_t;
typedef int (*p_callback)(char* loc, const char* msg);
typedef void* st_context_v2_t;
////////////////////////////////
// SolTrace Context Functions //
////////////////////////////////

// functions for SolTrace context management
STAPI_V2 st_return_t st_create_context(st_context_v2_t* pcxt, p_callback cb = nullptr);
STAPI_V2 st_return_t st_reset_context(st_context_v2_t pcxt);
STAPI_V2 st_return_t st_free_context(st_context_v2_t pcxt);
// Simlulation Runner Functions
typedef struct args_st_get_installed_runners {
	uint8_t *installed;
} args_st_get_installed_runners;
typedef struct args_st_is_runner_installed {
	st_runner_type_t type;
	bool             *installed;
} args_st_is_runner_installed;
/* ------------------------------------------------------------------ */
/* The function containing the loop for batching stapi_v2 calls.      */
/*                                                                    */
/* functions : array of function pointers (stored generically)        */
/* arguments : array of void* pointers, each actually pointing at a   */
/*             st_api_call_args struct                                */
/* count     : number of calls to make                                */
/*                                                                    */
/* For each call, the void* function pointer and void* argument       */
/* pointer are cast back to their real, concrete types inside the 	  */
/* loop, based on the st_api_call tag carried in st_api_call_args.    */
/* Error codes break the loop, and warning codes are ignored.         */
/* ------------------------------------------------------------------ */
STAPI_V2 st_return_t st_batch(st_context_v2_t  pcxt,
							  void 			   **arguments, // TODO: don't need to cast as void because all are st_api_call_args
							  st_uint_t  	   count,
                              st_uint_t		   *fail_iteration,
                              bool 			   verbose);